--- a/pom.xml
+++ b/pom.xml
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>org.jpac</groupId>
-    <artifactId>elbfisch</artifactId>
-    <version>2.2</version>
+    <artifactId>elbfisch.core</artifactId>
+    <version>2.2.1-SNAPSHOT</version>
     <packaging>jar</packaging>
     <dependencies>
         <dependency>
@@ -53,4 +52,5 @@
         <maven.compiler.target>1.8</maven.compiler.target>
     </properties>
     <name>elbfisch</name>
+    <groupId>elbfisch</groupId>
 </project>
