--- a/pom.xml
+++ b/pom.xml
@@ -4,41 +4,40 @@
     <name>elbfisch</name>
     <groupId>elbfisch</groupId>    
     <artifactId>elbfisch.core</artifactId>
-    <version>4.0.0</version>
+    <version>4.1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
     <dependencies>
         <dependency>
             <groupId>com.thoughtworks.xstream</groupId>
             <artifactId>xstream</artifactId>
-            <version>1.4.19</version>
-        </dependency>        
+            <version>1.4.20</version>
+        </dependency>      
         <dependency>
             <groupId>commons-configuration</groupId>
             <artifactId>commons-configuration</artifactId>
-            <version>1.6</version>
+            <version>1.9</version>
         </dependency>        
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
-            <version>1.7.25</version>
+            <version>1.7.32</version>
         </dependency>
-		<dependency>
-		    <groupId>org.eclipse.milo</groupId>
-		    <artifactId>sdk-client</artifactId>
-		    <version>0.3.1</version>
-		</dependency>
-		<dependency>
-		    <groupId>org.eclipse.milo</groupId>
-		    <artifactId>sdk-server</artifactId>
-		    <version>0.3.1</version>
-		</dependency>
-		<dependency>
-			<groupId>naturalcli</groupId>
-			<artifactId>naturalcli</artifactId>
-			<version>1.2.3</version>
-			<scope>system</scope>
-			<systemPath>/Users/berndschuster/projects/javalibs/naturalcli-1.2.3.jar</systemPath>
-		</dependency>        
+        <dependency>
+            <groupId>org.eclipse.milo</groupId>
+            <artifactId>sdk-server</artifactId>
+            <version>0.6.11</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.eclipse.milo</groupId>
+            <artifactId>dictionary-manager</artifactId>
+            <version>0.6.11</version>
+        </dependency>
+        <dependency>
+            <groupId>org.jline</groupId>
+            <artifactId>jline</artifactId>
+            <version>3.25.1</version>
+        </dependency>      
     </dependencies>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
